made tags page work http://localhost:4000/tag/biology/ with wronf format,but broke http://localhost:4000/ (posts not showing up)

--- a/_layouts/_posts/2020-07-09-testimg.md
+++ b/_layouts/_posts/2020-07-09-testimg.md
@@ -3,7 +3,7 @@ layout: post
 title: Testing stuff
 description: A post to test posting
 summary: This is a summary
-tags: [biology]  
+tags: biology
 ---
 
 ¡oh!, san pedro de macorís, ey
