--- a/_posts/2020-03-17-copying.md
+++ b/_posts/2020-03-17-copying.md
@@ -5,25 +5,29 @@ description: when does it make sense to copy
 summary: Copying
 tags: introspections
 ---
-Copying is a great way to learn new things. A good example is copying the drawings of others to learn how to do it yourself. Copying drawings works because it is feasible to replicate every line of the drawing. Curiously, It also works because you focus on one aspect (say, the eye of a portrait) and learn from it, even if you don’t replicate the whole thing.
+Copying is a great way to learn new things. 
+
+A good example is copying the drawings of others to learn how to do it yourself. Copying drawings works  because it is feasible to replicate every line of the drawing, but also you because you can focus on one aspect (say, the eye of a portrait) and learn from it, even if you don’t replicate the whole thing.
 
 But sometimes, copying is useless unless you can do it completely, with very high fidelity.
 
-Copying investment is one example where it only works when replicating all investments, the reason is fairly simple: 
+Copying investments is one example where it only works when replicating all investments. The reason is fairly simple: 
 
 To be a great stock trader you need to consistently have one more good trade than bad.  For traders, bad decisions can be close to half of all.
 
-To be a great VC, you need a few of your investments to return +10X. What happens with the rest matter little to your performance. for VC bad decisions are the vast majority.
+To be a great VC, you need a few of your investments to return +10X. What happens with the rest matter little to your performance. for VCs,  bad decisions are the vast majority.
 
-Unless you get an index of all the decisions, you can copy a big bag of decisions from an excellent trader or VC and still lose all your money. 
+Unless you copy all the decisions (or have the luck to coyp only those that matter), you can find yourself copying most decisions from an excellent trader or VC and still lose all your money. 
 
 It would seem that in some cases it is always beneficial to copy, and in other not, but I don’t think that’s right.
 
- There are situations where copying a painting is counterproductive, and copying investments can be beneficial. If I learn how to draw eyes from a certain painter, but that style does not jive well with how I paint faces, it won’t help me draw better portraits. Another failure mode of copying someone else’s painting: If I copy someone else’s work with the utmost fidelity than my merits will be limited to being good at imitating. 
+ There are situations where copying a painting is counterproductive, and copying some random investments can be beneficial. If I learn how to draw eyes from a certain painter, but that style does not jive well with how I paint faces, it won’t help me draw better portraits. Another failure mode of copying someone else’s painting: If I copy someone else’s work with the utmost fidelity than my merits will be limited to being good at imitating. 
 
 Parallel issues are present with trading. On bull markets, there is a self-fulfilling cycle that can make copying investments a sound strategy. People are flush with cash, and FOMO led to rising valuations (markups in private markets), without much regard for fundamentals
 
-This, of course, extends to all sorts of endeavors like coding, taking standardized tests, singing, etc. It matters what gets copied, and how it is put to use. 
+This, of course, extends to all sorts of endeavors like coding, taking standardized tests, singing, etc. 
+
+It matters what gets copied, and how it is put to use. 
 
 The challenge then is to know if you are in a situation where copying is advantageous, or not. 
 
