changes Copying txt

--- a/_posts/2020-03-17-copying.md
+++ b/_posts/2020-03-17-copying.md
@@ -5,34 +5,43 @@ description: when does it make sense to copy
 summary: Copying
 tags: introspections
 ---
-Copying is a great way to learn new things. 
+Copying is a great way to learn new things.
 
-A good example is copying the drawings of others to learn how to do it yourself. Copying drawings works  because it is feasible to replicate every line of the drawing, but also you because you can focus on one aspect (say, the eye of a portrait) and learn from it, even if you don’t replicate the whole thing.
+Sometimes you can learn by copying the entirety of the work, or just a part of it. A good example is copying the drawings of others to learn how to do it yourself. Copying drawings works both when you replicate every line of the drawing to get a sense for how the whole piece came together, and also when you focus on one aspect (say, the eye of a portrait) and learn from it, even if you don’t replicate the whole thing.
 
-But sometimes, copying is useless unless you can do it completely, with very high fidelity.
+There are situations however where copying a painting is counterproductive. If I learn how to draw eyes from a certain painter, but that style does not jive well with how I paint faces, it won’t help me draw better portraits. Another failure mode of copying someone else’s painting could be to limit my merits to being good at imitating.
 
-Copying investments is one example where it only works when replicating all investments. The reason is fairly simple: 
+&nbsp;  
 
-To be a great stock trader you need to consistently have one more good trade than bad.  For traders, bad decisions can be close to half of all.
+Let’s look at another example: investing.
 
-To be a great VC, you need a few of your investments to return +10X. What happens with the rest matter little to your performance. for VCs,  bad decisions are the vast majority.
+To be a great stock trader you need to consistently have one more good trade than bad. For traders, bad decisions can be close to half of all.
 
-Unless you copy all the decisions (or have the luck to coyp only those that matter), you can find yourself copying most decisions from an excellent trader or VC and still lose all your money. 
+To be a great VC, you need a few of your investments to return +10X. What happens with the rest matter little to your performance. for VCs, bad decisions are the vast majority.
 
-It would seem that in some cases it is always beneficial to copy, and in other not, but I don’t think that’s right.
+Unless you copy all the decisions (or have the luck to copy only those that matter), you can find yourself copying most decisions from an excellent trader or VC and still lose all your money.
 
- There are situations where copying a painting is counterproductive, and copying some random investments can be beneficial. If I learn how to draw eyes from a certain painter, but that style does not jive well with how I paint faces, it won’t help me draw better portraits. Another failure mode of copying someone else’s painting: If I copy someone else’s work with the utmost fidelity than my merits will be limited to being good at imitating. 
+Yet, on bull markets, there is a self-fulfilling cycle that can make copying investments a sound strategy. People are flush with cash, and FOMO led to rising valuations (markups in private markets), without much regard for fundamentals
 
-Parallel issues are present with trading. On bull markets, there is a self-fulfilling cycle that can make copying investments a sound strategy. People are flush with cash, and FOMO led to rising valuations (markups in private markets), without much regard for fundamentals
+ &nbsp;  
 
-This, of course, extends to all sorts of endeavors like coding, taking standardized tests, singing, etc. 
 
-It matters what gets copied, and how it is put to use. 
-
-The challenge then is to know if you are in a situation where copying is advantageous, or not. 
+The challenge then is to know if you are in a situation where copying is advantageous, or not.
 
 One clear way to benefit from copying is to use it as a way to understand how the thing was done, the output being useful only as a reference for the end of a process, not as a goal in itself.
 
 Another way to benefit from copying is to do it in order to get a missing piece of a bigger thing you are building. If you are sculpting a marbled goat, and you are struggling to chisel the goat’s beard, you might benefit from seeing how someone else did it. Then, you can integrate it into your work.
 
 Related to these two points, copying is most useful when you are copying a ton of different people. It is easier to understand different techniques and to judge different ideas when you can put one next to another.
+
+It also follows from there that, there is a certain amount of productive copying; doing work without copying is equally important.
+
+&nbsp;  
+
+Copying has a  lot of negative connotations. I think they are mostly misunderstanding about stealing. 
+
+To steal means to take from someone so that that person can no longer have the thing. With physical objects, that is straightforward. With art, code, or ideas, is a bit fuzzier, but the core remains: if you copy what someone else did, and use it in a way such that the original creator cannot longer use it (you copy exactly and claim to be the original, or copy and the respect explicit rules the owner of the original imposed, etc) than you are stealing. 
+
+Saying “copying is good” or “copying is bad” are fairly empty statements. How you copy someone else’s work, and what you do with what you copy makes it either a great thing or a terrible thing, or anything in between.
+
+These sorts of distinctions are very important when sharing concepts and ideas with others. To value copying other people’s work or being opportunistic to add another example,  can mean very different things depending on how you define the activities and their purpose. 
