--- a/_posts/2020-03-17-copying.md
+++ b/_posts/2020-03-17-copying.md
@@ -40,7 +40,7 @@ It also follows from there that, there is a certain amount of productive copying
 
 Copying has a  lot of negative connotations. I think they are mostly misunderstanding about stealing. 
 
-To steal means to take from someone so that that person can no longer have the thing. With physical objects, that is straightforward. With art, code, or ideas, is a bit fuzzier, but the core remains: if you copy what someone else did, and use it in a way such that the original creator cannot longer use it (you copy exactly and claim to be the original, or copy and the respect explicit rules the owner of the original imposed, etc) than you are stealing. 
+To steal means to take from someone so that that person can no longer have the thing. With physical objects, that is straightforward. With art, code, or ideas, is a bit fuzzier, but the core remains: if you copy what someone else did, and use it in a way such that the original creator cannot longer use it (you copy exactly and claim to be the original, or copy and the respect explicit rules the owner of the original imposed, etc) then you are stealing. 
 
 Saying “copying is good” or “copying is bad” are fairly empty statements. How you copy someone else’s work, and what you do with what you copy makes it either a great thing or a terrible thing, or anything in between.
 
