new post new tag

--- a/_posts/2020-03-29-time.md
+++ b/_posts/2020-03-29-time.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Time
-description: what is time, for dummies
-summary: trying to explain to myself what is time
+description: trying to explain to myself what is time
+summary: what is time,for dummies
 tags: science
 ---
 
