--- a/_posts/2020-03-17-copying.md
+++ b/_posts/2020-03-17-copying.md
@@ -15,7 +15,7 @@ There are situations however where copying a painting is counterproductive. If I
 
 Let’s look at another example: investing.
 
- To be a great stock trader you need to consistently have one more good trade than bad. That means you can half almost half of all yu trades be a loss, and still be great at the job
+ To be a great stock trader you need to consistently have one more good trade than bad. That means almost half of all your trades can be a loss, and still be great at the job.
 
 To be a great VC, you need a few of your investments to return +10X. What happens with the rest matter little to your performance. for VCs, bad decisions are the vast majority.
 
