--- a/_posts/2021-03-12-enough.md
+++ b/_posts/2021-03-12-enough.md
@@ -6,7 +6,7 @@ summary: Enough
 tags: introspections 
 ---
 
-The author of the bestseller Catcher in the Rye, J.D Salinger, is at a fancy party in New York City. He is talking to a friend when a magnate passes by. His friend says to him: J.D, that guy who just passed makes more money in a year than you have ever made with your book. To which, Mr. Salinger replies: but I have something he does not have. What is that? Asks the friend. _Enough_ says, Salinger, enough. 
+The author of the bestseller Catcher in the Rye, J.D Salinger, is at a fancy party in New York City. He is talking to a friend when a magnate passes by. His friend says to him: J.D, that guy who just passed makes more money in a year than you have ever made with your book. To which, Mr. Salinger replies: but I have something he does not have. What is that? Asks the friend. _Enough_ says Salinger, enough. 
 
 I have made several Google searches on this story and have not confirmed it is true. But I like it a ton and constantly share it with friends.  I recently shared it with a dear friend, in the context of Bitcoin, and specifically the _hodl_ culture. He mentioned how bitcoiners often feel they don’t have enough BTC and always want to buy more; how they would never want to sell their stash.
 
