--- a/_posts/2021-03-12-enough.md
+++ b/_posts/2021-03-12-enough.md
@@ -14,13 +14,13 @@ I like Bitcoin. It can diffuse political power, abolish the taxation of the poor
 
 &nbsp;  
 
- I am currently reading the Lord of the Ring with my kids, and I have perfected my impersonation of Gollum. As my friend and I kept talking about the _hodl _culture, I interrupted with my Gollum voice, “my precious, yes, yes, my precious.” That Ring is scary. The holders of the One Ring not so much have it, as it has them. 
+ I am currently reading the Lord of the Ring with my kids, and I have perfected my impersonation of Gollum. As my friend and I kept talking about the _hodl _ culture, I interrupted with my Gollum voice, “my precious, yes, yes, my precious.” That Ring is scary. The holders of the One Ring not so much have it, as it has them. 
 
 Long-term holders are an essential component of the bitcoin network. In a sense, they are scarcity validators: they are the social counterpart to the algorithm that limits the minting of BTC to 21 million. By holding, they say: I believe the 21M limit is true, and I am acting accordingly. Their long-term holding is also rational: they expect others to think the same at some point, which will further raise the asset’s price.
 
-_Hodling_ is good for the bitcoin network’s health, and I would say for the world at large, but also, maybe it is bad for people to _hodl _too much and too tight because it turns them into Smeagol, maybe even into Gollum?  
+_Hodling_ is good for the bitcoin network’s health, and I would say for the world at large, but also, maybe it is bad for people to _hodl _ too much and too tight because it turns them into Smeagol, maybe even into Gollum?  
 
-What the Ring shows is that owning a thing can a nuanced affair. In one sense, the Baggins have the ring. In another sense, the Ring has them. The same thing may happen with Bitcoin.
+What the Ring shows is that owning a thing can be a nuanced affair. In one sense, the Baggins have the ring. In another sense, the Ring has them. The same thing may happen with Bitcoin.
 
 &nbsp;  
 
