--- a/_posts/2021-03-12-enough.md
+++ b/_posts/2021-03-12-enough.md
@@ -33,7 +33,7 @@ Still, you want to keep all that Bitcoin to protect and promote the Bitcoin netw
 
 The Bitcoin that is not yours is of whomever you decide. Maybe at some point, you give them to someone who will _hodl_ as well as you. Or you gift them to people in need who can make good use of them. Or maybe you want to distribute them equally to everyone in the Bitcoin network, in which case you could burn them and lower the available supply. 
 
-You have the BTCs, but they are not all yours, because at some point you said, enough. 
+You have the BTCs, but they are not all yours, because at some point you say alongside Salinger,  I have enough. 
 
  
 
